// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`mutations.updatePost admin should update a post with optional fields. 1`] = `
Object {
  "updatePost": Object {
    "errorCode": null,
    "post": Object {
      "abstract": "résumé",
      "authors": Array [
        Object {
          "id": "VXNlcjp1c2VyVGhlbw==",
        },
      ],
      "body": "<p>Mon article</p>",
      "commentable": true,
      "displayedOnBlog": true,
      "isPublished": true,
      "media": Object {
        "id": "media1",
        "url": "https://capco.test/media/default/0001/01/providerReference1.jpg",
      },
      "metaDescription": "meta description",
      "publishedAt": "2020-06-05 12:15:30",
      "relatedContent": Array [
        Object {
          "__typename": "Theme",
          "id": "theme4",
          "title": "Thème vide",
        },
        Object {
          "__typename": "Proposal",
          "id": "UHJvcG9zYWw6cHJvcG9zYWwx",
          "title": "Ravalement de la façade de la bibliothèque municipale",
        },
        Object {
          "__typename": "Proposal",
          "id": "UHJvcG9zYWw6cHJvcG9zYWwxMDg=",
          "title": "Renovation of the gymnasium",
        },
        Object {
          "__typename": "Project",
          "id": "UHJvamVjdDpwcm9qZWN0SWRmMw==",
          "title": "Budget Participatif IdF 3",
        },
        Object {
          "__typename": "Project",
          "id": "UHJvamVjdDpwcm9qZWN0Rm9vZA==",
          "title": "Food project",
        },
      ],
      "title": "Titre !",
    },
  },
}
`;

exports[`mutations.updatePost admin should update a post with required fields. 1`] = `
Object {
  "updatePost": Object {
    "errorCode": null,
    "post": Object {
      "abstract": "Résumé du post FR 1",
      "authors": Array [
        Object {
          "id": "VXNlcjp1c2VyVGhlbw==",
        },
      ],
      "body": "<p>Mon article</p>",
      "commentable": true,
      "displayedOnBlog": true,
      "isPublished": true,
      "media": Object {
        "id": "media1",
        "url": "https://capco.test/media/default/0001/01/providerReference1.jpg",
      },
      "metaDescription": null,
      "publishedAt": "2020-06-05 12:15:30",
      "relatedContent": Array [],
      "title": "Titre !",
    },
  },
}
`;
